<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Grilled Food</string>
    <string name="slogan">Fast Order</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Eat it</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="english">English</string>
    <string name="arabic">Arabic</string>

    <string name="FACEBOOK_APP_ID">412499472630411</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">b5bdf54fb155694ede4e4c7fe956bd0f</string>
    <string name="FACEBOOK_LOGIN_PROTOCOL_NAME">fb412499472630411</string>
    <string name="egp">$</string>
    <string name="elmaadi">El Ma\'adi</string>
    <string name="extraorders">Extra Orders</string>
    <string name="desciption">description</string>
    <string name="menu_item">Menu</string>
    <string name="cart_item">Cart</string>
    <string name="homeaddress_item">Home Address</string>
    <string name="orders_item">Orders</string>
    <string name="language_item">Language</string>
    <string name="sign_out">Sign Out</string>
    <string name="main_dishes">Main Dishes</string>
    <string name="meals">Meals</string>
    <string name="sandwiches">Sandwiches</string>
    <string name="choose_your_region">Choose Your Region</string>
    <string name="delivery_to">Delivery To ..</string>
    <string name="menu_list">Menu List</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="delivery">Delivery:</string>
    <string name="free">free</string>
    <string name="Added_to_Cart_Successfully">Added to Cart Successfully</string>
    <string name="ElMaadi">El Ma\'adi</string>
    <string name="ElSayedaZeinab">El Sayeda Zeinab</string>
    <string name="MasrElQadema">Masr El Qadema</string>
    <string name="ElManial">El Manial</string>
    <string name="ElFostat">El Fostat</string>
    <string name="GardenCity">Garden City</string>
    <string name="Faisal">Faisal</string>
    <string name="ElHaram">El Haram</string>
    <string name="ElDokki">El Dokki</string>
    <string name="ElAgoza">El Agoza</string>
    <string name="ElMohandesen">El Mohandesen</string>
    <string name="Cairo">Cairo</string>
    <string name="Giza">Giza</string>
    <string name="Menu">Menu</string>
    <string name="Regions">Regions</string>
    <string name="total">Total:</string>
    <string name="deliveryfees">Delivery:</string>
    <string name="place_order">Place Order</string>
    <string name="SelectYourRegion">Select Your Region</string>
    <string name="extra_rice">Extra : Rice</string>
    <string name="quantity">Quantity :</string>
    <string name="subscribe_to_discount_news">Subscribe to Discount News</string>
    <string name="discount_news">Discount News</string>
    <string name="Otherchoices">Other choices</string>
    <string name="Kilo">Kilo</string>
    <string name="enter_with_your_number">Enter With your number</string>


</resources>