<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_cart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Cart">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/cart_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:padding="15dp" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            app:cardBackgroundColor="#ddd">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/total_view"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:weightSum="16">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textSize="15sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="start"
                    android:text=" 0 USD"
                    android:textColor="#DD0418"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/deliveryfees"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tax_total"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text=" 0 EGP"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="15sp" />


            </LinearLayout>

            <com.spark.submitbutton.SubmitButton
                android:id="@+id/placeOrderButton"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_below="@+id/total_view"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="100dp"
                android:text="@string/place_order"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:sub_btn_background="@color/white"
                app:sub_btn_duration="2000"
                app:sub_btn_line_color="@color/white"
                app:sub_btn_ripple_color="#307A24"

                app:sub_btn_tick_color="#307A24" />


        </RelativeLayout>


    </android.support.v7.widget.CardView>
    </LinearLayout>


</LinearLayout>